[gd_scene load_steps=17 format=3 uid="uid://cly3sjbyuc6oi"]

[ext_resource type="Script" uid="uid://ex88fwxmo8b0" path="res://Minigames/symptoms.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://bg4jttcqvb5me" path="res://Assets/background1_1.png" id="2_kgmhw"]
[ext_resource type="Texture2D" uid="uid://ch2uvtujpheey" path="res://Assets/main_char.png" id="3_mmel0"]
[ext_resource type="Texture2D" uid="uid://dakittkql30pe" path="res://Assets/mesa.png" id="4_npfsh"]
[ext_resource type="Texture2D" uid="uid://b74ygkkh6uw1m" path="res://Assets/book.png" id="6_hhlsg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_speech_bubble"]
bg_color = Color(0.147672, 0.147672, 0.147672, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.5)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pagination_button_disabled"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 0.3)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pagination_button_hover"]
bg_color = Color(0.4, 0.6, 1, 0.1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pagination_button"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.25, 0.45, 0.85, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.6, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.15, 0.35, 0.75, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.4, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.2, 0.4, 0.8, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.5, 0.9, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diagnose_hover"]
bg_color = Color(0.85, 0.25, 0.25, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.4, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diagnose_pressed"]
bg_color = Color(0.75, 0.15, 0.15, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diagnose_normal"]
bg_color = Color(0.8, 0.2, 0.2, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.9, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_queue_patient"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 0.3)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 4

[node name="Symptoms" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.755, 0.755)
texture = ExtResource("2_kgmhw")

[node name="PatientAsset" type="TextureRect" parent="."]
offset_left = -1.0
offset_top = 28.0
offset_right = 523.0
offset_bottom = 564.0
texture = ExtResource("3_mmel0")

[node name="SpeechBubble" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.755
offset_top = 20.0
offset_right = 131.245
offset_bottom = 110.765
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_speech_bubble")

[node name="SpeechContent" type="RichTextLabel" parent="SpeechBubble"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "I'm not feeling well..."
fit_content = true
autowrap_mode = 2

[node name="Table" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -49.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(612, -119)
texture = ExtResource("4_npfsh")
expand_mode = 1
stretch_mode = 6

[node name="Prontuary" type="Panel" parent="."]
anchors_preset = -1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = 798.55
offset_top = 37.165
offset_right = 2004.17
offset_bottom = 1526.07
scale = Vector2(0.135, 0.135)

[node name="ProntuaryContent" type="Control" parent="Prontuary"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -14.51
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Prontuary/ProntuaryContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.08
offset_top = 100.0
offset_right = -227.825
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 245

[node name="VBoxContainer" type="VBoxContainer" parent="Prontuary/ProntuaryContent/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="PatientHeader" type="HBoxContainer" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PatientAvatar" type="TextureRect" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/PatientHeader"]
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="PatientInfo" type="VBoxContainer" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/PatientHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PatientName" type="Label" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/PatientHeader/PatientInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 299
text = "John Doe"

[node name="PatientDetails" type="Label" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/PatientHeader/PatientInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 141
text = "Age: 34 | Sex: Male"

[node name="HSeparator" type="HSeparator" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VitalSigns" type="GridContainer" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 2

[node name="HR" type="Label" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/VitalSigns"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 121
text = "Heart Rate:"

[node name="HRValue" type="Label" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/VitalSigns"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 121
text = "80 bpm"

[node name="SpO2" type="Label" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/VitalSigns"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 226
text = "SpO2:"

[node name="SpO2Value" type="Label" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer/VitalSigns"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 176
text = "98%"

[node name="HSeparator2" type="HSeparator" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SymptomsLabel" type="Label" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 96
text = "Reported Symptoms:"
vertical_alignment = 1

[node name="SymptomsList" type="RichTextLabel" parent="Prontuary/ProntuaryContent/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/bold_italics_font_size = 151
theme_override_font_sizes/italics_font_size = 111
theme_override_font_sizes/mono_font_size = 161
theme_override_font_sizes/normal_font_size = 91
bbcode_enabled = true
text = "[indent]• [color=#ff6b6b]⚠️[/color] Chest pain
• [color=#4ecdc4]💨[/color] Shortness of breath
• [color=#ffe66d]💫[/color] Dizziness[/indent]"

[node name="Manual" type="TextureRect" parent="."]
offset_left = 38.0
offset_top = 429.0
offset_right = 4038.0
offset_bottom = 2929.0
scale = Vector2(0.07, 0.07)
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource("6_hhlsg")

[node name="CloseButton" type="Button" parent="Manual"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 160.0
grow_horizontal = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 96
text = "X"

[node name="ManualContent" type="Control" parent="Manual"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Manual/ManualContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = 356.865
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = -20
theme_override_constants/margin_right = 3380
theme_override_constants/margin_bottom = 1780

[node name="VBoxContainer" type="VBoxContainer" parent="Manual/ManualContent/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Manual/ManualContent/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Medical Reference Manual"
horizontal_alignment = 1

[node name="PageContent" type="Control" parent="Manual/ManualContent/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IllnessList" type="RichTextLabel" parent="Manual/ManualContent/MarginContainer/VBoxContainer/PageContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.2856
offset_bottom = -14.2856
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
scroll_active = false

[node name="PaginationButtons" type="HBoxContainer" parent="Manual/ManualContent/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PrevPageButton" type="Button" parent="Manual/ManualContent/MarginContainer/VBoxContainer/PaginationButtons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.4, 0.4, 0.4, 0.3)
theme_override_colors/font_hover_color = Color(0.4, 0.6, 1, 1)
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_pagination_button_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_pagination_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_pagination_button")
text = "Previous"

[node name="PageLabel" type="Label" parent="Manual/ManualContent/MarginContainer/VBoxContainer/PaginationButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Page 1/2"
horizontal_alignment = 1

[node name="NextPageButton" type="Button" parent="Manual/ManualContent/MarginContainer/VBoxContainer/PaginationButtons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.4, 0.4, 0.4, 0.3)
theme_override_colors/font_hover_color = Color(0.4, 0.6, 1, 1)
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_pagination_button_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_pagination_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_pagination_button")
text = "Next"

[node name="HowToTreat" type="TextureRect" parent="."]
offset_left = 282.625
offset_top = 429.0
offset_right = 4282.63
offset_bottom = 2929.0
scale = Vector2(0.07, 0.07)
mouse_filter = 2
mouse_default_cursor_shape = 2
texture = ExtResource("6_hhlsg")

[node name="CloseButton" type="Button" parent="HowToTreat"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 160.0
grow_horizontal = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 96
text = "X"

[node name="ManualContent" type="Control" parent="HowToTreat"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HowToTreat/ManualContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = 356.865
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = -20
theme_override_constants/margin_right = 3380
theme_override_constants/margin_bottom = 1780

[node name="VBoxContainer" type="VBoxContainer" parent="HowToTreat/ManualContent/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="HowToTreat/ManualContent/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Medical Reference Manual"
horizontal_alignment = 1

[node name="PageContent" type="Control" parent="HowToTreat/ManualContent/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="IllnessList" type="RichTextLabel" parent="HowToTreat/ManualContent/MarginContainer/VBoxContainer/PageContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.2856
offset_bottom = -14.2856
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
scroll_active = false

[node name="PaginationButtons" type="HBoxContainer" parent="HowToTreat/ManualContent/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PrevPageButton" type="Button" parent="HowToTreat/ManualContent/MarginContainer/VBoxContainer/PaginationButtons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.4, 0.4, 0.4, 0.3)
theme_override_colors/font_hover_color = Color(0.4, 0.6, 1, 1)
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_pagination_button_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_pagination_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_pagination_button")
text = "Previous"

[node name="PageLabel" type="Label" parent="HowToTreat/ManualContent/MarginContainer/VBoxContainer/PaginationButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Page 1/2"
horizontal_alignment = 1

[node name="NextPageButton" type="Button" parent="HowToTreat/ManualContent/MarginContainer/VBoxContainer/PaginationButtons"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.4, 0.4, 0.4, 0.3)
theme_override_colors/font_hover_color = Color(0.4, 0.6, 1, 1)
theme_override_colors/font_color = Color(0.4, 0.6, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/disabled = SubResource("StyleBoxFlat_pagination_button_disabled")
theme_override_styles/hover = SubResource("StyleBoxFlat_pagination_button_hover")
theme_override_styles/normal = SubResource("StyleBoxFlat_pagination_button")
text = "Next"

[node name="ActionButtons" type="VBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 692.755
offset_top = -238.785
offset_right = -57.755
offset_bottom = -47.785
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="RequestInfoButton" type="Button" parent="ActionButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
text = "Request More Info"

[node name="DiagnoseButton" type="Button" parent="ActionButtons"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_diagnose_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_diagnose_pressed")
theme_override_styles/normal = SubResource("StyleBoxFlat_diagnose_normal")
text = "Make Diagnosis"

[node name="NextPatientButton" type="Button" parent="ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Patient"

[node name="QueueLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Patients in Queue: 3"

[node name="QueueContainer" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 10.76
offset_right = -20.0
offset_bottom = 70.76
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="QueuePatient1" type="Panel" parent="QueueContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_queue_patient")

[node name="QueuePatient2" type="Panel" parent="QueueContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_queue_patient")

[node name="QueuePatient3" type="Panel" parent="QueueContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_queue_patient")
